Move to Java 25 and use Ahead Of Time compilation to speed startup
In the docker build, we record an AOT file and embed that in the docker image
Then at runtime, we tell the JVM to use that to skip a bunch of JIT that normally happens.

This necessitated moving to the kafka-clients 4.X library, and the latest Gradle (9.4.1).